syntax = "proto3";

package proto;

import "google/protobuf/any.proto";


service Plugin {
    rpc Info(Empty) returns (PluginInfo);
    rpc Check (CheckRequest) returns (CheckResponse);
    rpc Action (ActionRequest) returns (ActionResponse);
    rpc Configure (PluginConfig) returns (Empty);

    //Graceful Shutdown Plugin
    rpc Stop (Stop.Request) returns (Stop.Response);
}

message PluginInfo {
    //unique ID of plugin
    //basically it is slugged URI of plugin repository name e. g. supergiant-underutilized-nodes
    string id = 1;
    //plugin version in semver format
    string version = 2;
    //short name of plugin
    string name = 3;
    // detailed plugin description
    string description = 4;
}

message PluginConfig {
    string cloud_provider_type = 1;
    string financial_api_uri = 2;
    string api_server_uri = 3;
    string metrics_uri = 4;
}

message Stop {
    message Request {
    }
    message Response {
        string error = 1;
    }
}

message CheckRequest {}

message CheckResponse {
    CheckResult result = 1;
    string error = 2;
}

message CheckResult {
    string execution_status = 1;
    CheckStatus status = 2;
    string name = 3;
    // TODO: temporary solution need to be redesigned.
    google.protobuf.Any description = 4;
    repeated Action actions = 5;
}

enum CheckStatus {
    UNKNOWN_CHECK_STATUS = 0;
    GREEN = 1;
    YELLOW = 2;
    RED = 3;
}

message Action {
    string action_id = 1; // it is impossible ty make actions typed
    string description = 2;
}

message ActionRequest {
    string action_id = 1;
}

message ActionResponse {
    string error = 2;
}

message Empty {}
